--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-alloc-rnb = { path = "dependencies/alloc-rnb" }
 
 # Allow cargo fmt and cargo test for all specified dependencies.
 # cargo fmt
 # cargo test --workspace
 [workspace]
-members = [
-    "dependencies/alloc-rnb"
-]
+members = []
 
 [features]
-allocator_trait = ["alloc-rnb/allocator_trait"]
