--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "alloc_test"
+name = "buddy-allocator-nightly"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 
@@ -14,5 +12,6 @@ edition = "2021"
 members = []
 
 [features]
+no-std = []
 
 [dev-dependencies]
