--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "buddy-allocator-nightly"
-version = "0.1.0"
+name = "night-buddy-allocator"
+version = "0.0.1-alpha"
 edition = "2021"
+description = "A buddy memory allocator witch uses nightly toolchain for 32b/64b systems with no_std feature (tested on version 1.64.0-nightly)"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 
