--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.2-alpha"
 edition = "2021"
 description = "A buddy memory allocator witch uses nightly toolchain for 32b/64b systems with no_std feature (tested on version 1.64.0-nightly)"
 license = "MIT/Apache-2.0"
+repository = "https://gitlab.com/mordaklavache/rust-custom-alloc/"
 
 [dependencies]
 
